More data components
- moved component-related helper methods to their own class, DataComponentHelper
- ItemNBTHelper is now deprecated